--- a/src/app/browser/browser.component.html
+++ b/src/app/browser/browser.component.html
@@ -1,13 +1,6 @@
 <div class="container-fluid">
   <h2>Browser</h2>
 
-  <!--<nav class="nav nav-pills col-auto">-->
-  <!--<a [routerLink]="['/browser']" class="nav-link" [class.active]="isRoot()"><i class="oi oi-home"></i> Shares</a>-->
-  <!--<a (click)="previous()" href="" class="nav-link"><i class="oi oi-arrow-circle-left"></i> Previous</a>-->
-  <!--<a [routerLink]="['/browser', file.parentId]" *ngIf="file && file.parentId" class="nav-link"><i-->
-  <!--class="oi oi-arrow-circle-top"></i> Parent</a>-->
-  <!--</nav>-->
-
   <div *ngIf="file">
     <nav aria-label="breadcrumb" role="navigation">
       <ol class="breadcrumb">
@@ -21,17 +14,6 @@
       </ol>
     </nav>
 
-    <table class="table table-striped table-bordered table-hover table-sm">
-      <thead>
-      <tr>
-        <th style="width: 20px"></th>
-        <th>Name</th>
-      </tr>
-      </thead>
-      <tr *ngFor="let f of file.children">
-        <td><i class="oi oi-folder"></i></td>
-        <td><a [routerLink]="['/browser', f.pathId]">{{f.name}}</a></td>
-      </tr>
-    </table>
+    <app-file-list [files]="file.children" [parentFile]="file.parentId"></app-file-list>
   </div>
 </div>
