--- a/src/app/browser/file-list/file-list.component.html
+++ b/src/app/browser/file-list/file-list.component.html
@@ -10,9 +10,9 @@
     <td><a [routerLink]="['/browser', parentFile]">..</a></td>
   </tr>
   <tr *ngFor="let f of files">
-    <td><i class="oi" [class.oi-folder]="!isFile(f) && !isPlayable(f)" [class.oi-file]="isFile(f)"
+    <td><i class="oi" [class.oi-folder]="isDir(f)" [class.oi-file]="!isDir(f) && !isPlayable(f)"
            [class.oi-camera-slr]="isPlayable(f)"></i></td>
-    <td><a *ngIf="isPlayable(f)" (click)="play(f)" class="float-right"><i class="oi oi-media-play"></i></a>
+    <td><a *ngIf="isPlayable(f)" (click)="play(f)" class="btn btn-primary btn-sm float-right"><i class="oi oi-media-play"></i></a>
       <a [routerLink]="['/browser', f.pathId]">{{f.name}}</a></td>
   </tr>
 </table>
