--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -7,11 +7,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/browser']">Browser</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/']">Media</a>
+      <li class="nav-item" *ngFor="let e of navEntries" [class.active]="isSelected(e)">
+        <a class="nav-link" [routerLink]="[e.path]">{{e.name}}</a>
       </li>
     </ul>
   </div>
