--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -13,8 +13,8 @@
     </ul>
   </div>
 
-  <form class="form-inline my-2 my-lg-0 d-none d-sm-block">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  <form class="form-inline my-2 my-lg-0 d-none d-md-block">
+    <input class="form-control mr-md-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-md-0" type="submit">Search</button>
   </form>
 </nav>
