--- a/src/app/remote/remote.component.less
+++ b/src/app/remote/remote.component.less
@@ -1,26 +1,38 @@
-.remote-quick-access {
-  .media-poster {
-    margin: 20px auto;
-    width: 150px;
-    height: 200px;
-    background-color: lightgray;
-  }
+.media-poster {
+  margin: 20px auto;
+  width: 150px;
+  height: 200px;
+  background-color: lightgray;
+}
 
-  .controls {
-    text-align: center;
+.remote-controls {
+  text-align: center;
+}
+
+@screen-md-min: 768px;
+
+.remote-media-path {
+  font-size: 0.8em;
+  color: grey;
+  font-style: italic;
+
+  @media (min-width: @screen-md-min) {
+    font-size: 1em;
   }
 }
 
-.remote-media-title {
-  .media-path {
-    font-size: 0.8em;
-    color: grey;
-    font-style: italic;
-  }
+.remote-media-name {
+  font-size: 1.1em;
+  font-weight: bold;
 
-  .media-name {
-    font-size: 1.1em;
-    font-weight: bold;
+  @media (min-width: @screen-md-min) {
+    font-size: 1.4em;
+  }
+}
+
+.remote-content {
+  @media (min-width: @screen-md-min) {
+    margin-top: 20px;
   }
 }
 
